# my-epic-swag-game

./: .gitignore  CMakeLists.txt  makefile
assets/shaders/: tris.frag  tris.vert
include/: game.hpp  graphics.hpp  inireader.hpp  matrix4.hpp  rect.hpp  settings.hpp  shader_program.hpp  uniform_buffer.hpp  vector3.hpp  vector4.hpp  vertex_array.hpp  window.hpp
lib/glad/: glad.h  glad_wgl.h
src/: game.cpp  glad.c  glad_wgl.c  graphics.cpp  inireader.cpp  main.cpp  matrix4.cpp  settings.cpp  shader_program.cpp  uniform_buffer.cpp  vertex_array.cpp  window.cpp
src/win32/: gameWin32.cpp  graphicsWin32.cpp
